--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   get: ^4.7.2
   firebase_auth: ^6.0.1
   cloud_firestore: ^6.0.0
+  agora_rtc_engine: ^6.2.4
+  permission_handler: ^11.3.1
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
